# tokasino

./: .gitignore  Cargo.toml  README.md  genesis.json
crates/consensus/: Cargo.toml
crates/consensus/src/: beacon.rs  dkg.rs  engine.rs  main.rs  p2p.rs  threshold.rs  vrf.rs
crates/contracts/: foundry.toml
crates/contracts/script/: Deploy.s.sol
crates/contracts/src/: CasinoExample.sol  CoinFlip.sol  DRBCommitReveal.sol  IRandomness.sol  InstantDice.sol  Lottery.sol  RPS.sol  RandomBeaconHistory.sol  Roulette.sol  TokasinoRandom.sol  VRFVerifier.sol  VrfRandom.sol
crates/contracts/test/: CoinFlip.t.sol  Lottery.t.sol  Roulette.t.sol
crates/node/: Cargo.toml
crates/node/src/: evm.rs  executor.rs  main.rs
docs/: enshrined-vrf-deep-dive.md  game.md  randomness-explained.md  tokasino-deep-dive.md  webapp-demo-guide.md
scripts/: deploy-contracts.sh  test-integration.sh
webapp/: coinflip.html  demo.html  dice.html  index.html  liquidity.html  lottery.html  package-lock.json  package.json  randomness.html  roulette.html  rps.html  setup.html  vite.config.js
webapp/shared/: config.js  style.css  wallet.js
webapp/src/: appkit.js  coinflip.js  config.js  demo.js  dice.js  hub.js  liquidity.js  lottery.js  randomness.js  roulette.js  rps.js  setup.js
webapp/src/randomness/: App.jsx  main.jsx  randomness.css
webapp/src/randomness/components/: DetailPanel.jsx  PipelineNav.jsx  PipelineNode.jsx  TopBar.jsx
webapp/src/randomness/components/features/: TimelineComparison.jsx  TryItDice.jsx  VerificationDemo.jsx
webapp/src/randomness/components/stages/: StageChaining.jsx  StageContract.jsx  StagePrecompile.jsx  StagePrevrandao.jsx  StageProblem.jsx  StageVrf.jsx
webapp/src/randomness/context/: RandomnessContext.jsx
webapp/src/randomness/hooks/: useAutoTour.js  useBlockPoller.js  useDiceContract.js  usePrecompileCall.js  useTracedBlock.js  useVerifyBlock.js
webapp/src/randomness/lib/: helpers.js  provider.js
