[workspace]
members = ["crates/node", "crates/consensus"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.93"

[workspace.dependencies]
# reth (git dependency, pinned to stable release)
reth = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3", features = ["node", "evm", "cli"] }
reth-evm = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }

# alloy
alloy-evm = "0.27"
alloy-primitives = "1.5"
alloy-genesis = "1.8"
alloy-sol-types = "1.5"
alloy-eips = "1.8"
alloy-rpc-types-engine = "1.8"

# revm
revm = "34.0"

# crypto
blst = "0.3"
rand_chacha = "0.9"
rand = "0.8"

# async
tokio = { version = "1.44", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# misc
eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
