[workspace]
members = ["crates/node", "crates/consensus"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[workspace.dependencies]
# op-reth (local path — clone op-rs/op-reth next to this repo)
reth-optimism-node = { path = "../enshrined-vrf-op-reth/crates/optimism/node" }
reth-optimism-evm = { path = "../enshrined-vrf-op-reth/crates/optimism/evm" }
reth-optimism-chainspec = { path = "../enshrined-vrf-op-reth/crates/optimism/chainspec" }
reth-optimism-primitives = { path = "../enshrined-vrf-op-reth/crates/optimism/primitives" }
reth-optimism-cli = { path = "../enshrined-vrf-op-reth/crates/optimism/cli" }
reth-optimism-forks = { path = "../enshrined-vrf-op-reth/crates/optimism/hardforks" }

# reth core (same tag as op-reth uses)
reth-node-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.2" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.2" }
reth-evm = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.2" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.2" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.2" }

# revm (match op-reth)
revm = "33.1"

# randomness
alloy-primitives = "1.5"
rand_chacha = "0.9"
rand = "0.9"

# consensus CL dependencies
blst = "0.3"
tokio = { version = "1.44", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
alloy-rpc-types-engine = "1.2"
eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
jsonwebtoken = "9"
hex = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
