[package]
name = "enshrined-vrf-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "enshrined-vrf-cl"
path = "src/main.rs"

[dependencies]
blst = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
eyre = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rpc-types-engine = { workspace = true }
tracing-subscriber = { workspace = true }
jsonwebtoken = { workspace = true }
hex = { workspace = true }
axum = { workspace = true }
