[package]
name = "tokasino-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "tokasino"
path = "src/main.rs"

[dependencies]
# op-reth
reth-optimism-node = { workspace = true }
reth-optimism-cli = { workspace = true }

# reth core
reth-cli-util = { workspace = true }
reth-tracing = { workspace = true }

# randomness precompile
alloy-primitives = { workspace = true }
revm = { workspace = true }
rand_chacha = { workspace = true }
rand = { workspace = true }

# misc
eyre = { workspace = true }
tokio = { workspace = true }
